tests/paczka1/fuzzy1/72295435.err
Error in line 6: PlKxqheJ A424 55,3
Error in line 13: t1aFFv A424 62,1
Error in line 11: DE3TeC7TaS A834 40,1
Error in line 14: t1aFFv A693 92,4
Error in line 17: t1aFFv A834 99,4
Error in line 19: o0umf5PR2 S363 71,8
Error in line 18: t1aFFv S363 35,9
Error in line 9: S363 S363 295,4
Error in line 12: PlKxqheJ A693 35,6
Error in line 31: PlKxqheJ A834 9,0
